--- a/error.html
+++ b/error.html
@@ -11,20 +11,14 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/login.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/error.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <!-- login form -->
-    <div class="login-page" id="login-page">
-      <form method="POST" action="profile.html" id="form">
-        <input
-          type="text"
-          placeholder="Enter Your Username"
-          id="username"
-        /><br />
-        <input type="submit" value="Fetch User" id="submit" />
-      </form>
+    <!-- error page -->
+
+    <div id="error-page">
+      <div class="error-img"></div>
+      <h3>Result Not Found, User Not Found</h3>
     </div>
-    <script type="module" src="assets/js/login.js"></script>
   </body>
 </html>
