--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>BuyCoins Interview Test</title>
+
+    <link
+      rel="icon"
+      href="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/login.css" rel="stylesheet" type="text/css" />
+    <title>BuyCoins Interview Test</title>
   </head>
   <body>
     <!-- login form -->
