fix codes properly

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
   <body>
     <!-- login form -->
     <div class="login-page" id="login-page">
+      <h3>Input your username to get the list of your repositories</h3>
       <form method="POST" action="profile.html" id="form">
-        <input
-          type="text"
-          placeholder="Enter Your Username"
-          id="username"
-        /><br />
-        <input type="submit" value="Fetch User" id="submit" />
+        <input type="text" placeholder="Enter Your Username" id="username" />
+        <caption>
+          <i>test github username : Fatimah019</i>
+        </caption>
+        <br />
+        <input type="submit" value="Fetch Profile" id="submit" />
       </form>
     </div>
     <script type="module" src="assets/js/login.js"></script>
