--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
     />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/header.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/user.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/profile.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <!-- user profile page -->
