--- a/index.html
+++ b/index.html
@@ -14,27 +14,98 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/header.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/login.css" rel="stylesheet" type="text/css" />
     <title>BuyCoins Interview Test</title>
   </head>
   <body>
+    <!-- header starts here-->
+    <header>
+      <!--nav icon  -->
+      <div class="nav-bar">
+        <svg
+          height="24"
+          class="octicon"
+          viewBox="0 0 16 16"
+          version="1.1"
+          width="24"
+          aria-hidden="true"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M1 2.75A.75.75 0 011.75 2h12.5a.75.75 0 110 1.5H1.75A.75.75 0 011 2.75zm0 5A.75.75 0 011.75 7h12.5a.75.75 0 110 1.5H1.75A.75.75 0 011 7.75zM1.75 12a.75.75 0 100 1.5h12.5a.75.75 0 100-1.5H1.75z"
+          ></path>
+        </svg>
+      </div>
+
+      <!-- menu nav list -->
+      <div class="header-menu-left">
+        <a class="github-logo" href="https://github.com/">
+          <svg
+            class="octicon"
+            height="32"
+            viewBox="0 0 16 16"
+            version="1.1"
+            width="32"
+            aria-hidden="true"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"
+            ></path>
+          </svg>
+        </a>
+
+        <nav class="header-nav">
+          <label>
+            <input type="text" placeholder="Search or jump to..." />
+            <i class="fa fa-slash">/</i>
+          </label>
+          <ul>
+            <!-- <li class="nav-item">
+              <a href="">Pull requests</a>
+            </li> -->
+
+            <li>
+              <a href="">Issues</a>
+            </li>
+            <li>
+              <a href="">Codespaces</a>
+            </li>
+            <li>
+              <a href="">Marketplace</a>
+            </li>
+            <li>
+              <a href="">Explore</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- right header -->
+      <div class="header-menu-right">
+        <button class="signup-btn">Sign Up</button>
+      </div>
+    </header>
+
     <!-- login form -->
     <div class="login-page" id="login-page">
-      <h3>Input your username to get the list of your repositories</h3>
+      <!-- <h3>Input your username to get the list of your repositories</h3> -->
       <form method="POST" action="profile.html" id="form">
         <input
           type="text"
-          placeholder="Enter Your Username"
+          placeholder="Enter Your Github Username"
           id="githubusername"
           class="githubusername"
         />
-        <caption>
+        <!-- <caption>
           <i>test github username : Fatimah019</i>
-        </caption>
+        </caption> -->
         <br />
         <input type="submit" value="Fetch Profile" id="submit" />
       </form>
     </div>
+    <script type="module" src="assets/js/navbar.js"></script>
     <script type="module" src="assets/js/login.js"></script>
   </body>
 </html>
