--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta content="utf-8" http-equiv="encoding" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
     <link
       rel="icon"
       href="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
@@ -23,7 +22,12 @@
     <div class="login-page" id="login-page">
       <h3>Input your username to get the list of your repositories</h3>
       <form method="POST" action="profile.html" id="form">
-        <input type="text" placeholder="Enter Your Username" id="username" />
+        <input
+          type="text"
+          placeholder="Enter Your Username"
+          id="githubusername"
+          class="githubusername"
+        />
         <caption>
           <i>test github username : Fatimah019</i>
         </caption>
