--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <input type="submit" value="Fetch Profile" id="submit" />
       </form>
     </div>
-    <script type="module" src="assets/js/navbar.js"></script>
-    <script type="module" src="assets/js/login.js"></script>
+    <script type="module" src="./assets/js/navbar.js"></script>
+    <script type="module" src="./assets/js/login.js"></script>
   </body>
 </html>
