--- a/profile.html
+++ b/profile.html
@@ -252,8 +252,8 @@
       </div>
     </div>
 
-    <script type="module" src="assets/js/navbar.js"></script>
-    <script type="module" src="assets/js/activelink.js"></script>
-    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="./assets/js/navbar.js"></script>
+    <script type="module" src="./assets/js/activelink.js"></script>
+    <script type="module" src="./assets/js/main.js"></script>
   </body>
 </html>
